src/objects/Cross_Reference_Customer__c.object
<CustomObject>
    <description>Cross Reference for Customer</description>
    <fields>
        <fullName>Child_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>TMMA Child Account</description>
        <label>Child Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account Customer Category must be Tier 4 - TMMA</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>TMMA Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.Customer_Category__c</field>
                <operation>equals</operation>
                <value>Tier 4 - TMMA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cross Reference - Customers</relationshipLabel>
        <relationshipName>Cross_Reference_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cross_Reference_Id_Full__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <label>Cross Reference Id Full</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Location__c</fullName>
        <description>Customer Location</description>
        <label>Customer Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>Customer Name</description>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Name_and_Location__c</fullName>
        <description>End Customer Name and Location</description>
        <formula>Customer_Name__c + &apos;-&apos; + Customer_Location__c</formula>
        <label>End Customer Name and Location</label>
        <type>Text</type>
    </fields>
    <label>Cross Reference - Customer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Child_Account__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Customer_Location__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>XRF-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cross Reference - Customers</pluralLabel>
    <recordTypes>
        <fullName>TMMA_Customer</fullName>
        <active>true</active>
        <description>TMMA Customer</description>
        <label>TMMA Customer</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>